--- a/src/Styles/BlogCard.css
+++ b/src/Styles/BlogCard.css
@@ -2,7 +2,9 @@
 	background-color: #e6ac86;
 	margin-left: 1%;
 	margin-right: 1%;
+	margin-top: 1%;
 	border-radius: 10px;
+	padding-top: 0.01%;
 	padding-left: 0.2%;
 	padding-right: 0.2%;
 }
