--- a/src/Styles/BlogCard.css
+++ b/src/Styles/BlogCard.css
@@ -1,5 +1,5 @@
 #blogcard-body {
-	background-color: #e6ac86;
+	background-color: #191927;
 	margin-left: 1%;
 	margin-right: 1%;
 	margin-top: 1%;
@@ -7,6 +7,7 @@
 	padding-top: 0.01%;
 	padding-left: 0.2%;
 	padding-right: 0.2%;
+	color: #c2c2c2;
 }
 
 #timestamp-div {
