--- a/src/Styles/Header.css
+++ b/src/Styles/Header.css
@@ -4,5 +4,7 @@
 	justify-content: space-between;
 	padding-left: 0.3%;
 	padding-right: 0.3%;
-	background-color: #e6ac86;
+	background-color: #191927;
+	color: #c2c2c2;
+	padding-bottom: 5px;
 }
